--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -101,7 +101,7 @@
 <!-- Ideally this would be a Canvas element. Here we simulate it with a high-end image and styling -->
 <div class="relative w-full h-full rounded-2xl overflow-visible flex items-center justify-center perspective-[1000px]">
 <!-- Simulated 3D Object Image -->
-<div class="w-[85%] h-[85%] bg-contain bg-center bg-no-repeat drop-shadow-2xl transition-transform duration-500 ease-out group-hover/widget:scale-105 group-active/widget:scale-95 group-active/widget:rotate-3" data-alt="Abstract dark glossy 3D geometric shape with teal rim lighting floating in a black void" style="background-image: url('./back.jpg'); filter: contrast(1.2) brightness(1.1);">
+<div class="w-[75%] h-[75%] bg-contain bg-center bg-no-repeat drop-shadow-2xl transition-transform duration-500 ease-out group-hover/widget:scale-105 group-active/widget:scale-95 group-active/widget:rotate-3" data-alt="Abstract dark glossy 3D geometric shape with teal rim lighting floating in a black void" style="background-image: url('./assets/icons/ali.png'); filter: contrast(0.98) brightness(1.1);">
 </div>
 <!-- Interactive HUD elements (Subtle) -->
 <!-- These simulate the 'widget' UI overlays that might appear in a 3D view -->
