--- a/timesburg/go/index-2.html
+++ b/timesburg/go/index-2.html
@@ -18,7 +18,7 @@ tailwind.config = {
   theme: {
     extend: {
       colors: {
-        primary: "#005d38", // 00bbc2
+        primary: "#1b855b", // 00bbc2 005d38
         bg: "#000000"
       },
       fontFamily: {
@@ -34,7 +34,16 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: #000;
+  background: #050600; /* 0b0900 */
+  user-select: none;       /* No se puede seleccionar texto */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+img {
+  -webkit-user-drag: none;
+  -user-drag: none;
+  user-drag: none;
 }
 
 .stage {
@@ -66,14 +75,13 @@ html, body {
 .light--active {
   opacity: 1;
 }
+.balance-text {
+    text-wrap: balance;
+  }
 
 
 
-#pins-layer {
-  position: absolute;
-  inset: 0;
-  pointer-events: auto;
-}
+
 
 .pin-led {
   position: absolute;
@@ -90,12 +98,17 @@ html, body {
 .pin-led::before {
   content: "";
   position: absolute;
+    box-shadow: 0 0 1px #ffffff, 0 0 1px #ffffff;
+    border-radius: 3rem;
   top: 50%;
   left: 50%;
   width: 2rem;   /* área clicable más grande */
   height: 2rem;
   transform: translate(-50%, -50%);
+
+  /* Animación de rebote */ animation: waveBounce 5s ease-out infinite; animation-delay: 0.3s;
 }
+@keyframes waveBounce { 0% { transform: translate(-50%, -50%) scale(1); opacity: 1; } 50% { transform: translate(-50%, -50%) scale(1.4); opacity: 0.4; } 100% { transform: translate(-50%, -50%) scale(1); opacity: 1; } }
 
 
 @keyframes blink {
@@ -103,11 +116,16 @@ html, body {
   50% { opacity: .3 }
 }
 
+.pin-led:active::before {
+  background-color: radial #000000 ;
+}
+
+
 #pins-layer {
   position: absolute;
   inset: 0;
   z-index: 2;           /* encima del card interno */
-  pointer-events: none;  /* el layer no bloquea */
+  pointer-events: auto;  /* el layer no bloquea */
 }
 
 .pin-led {
@@ -116,18 +134,47 @@ html, body {
 }
 
 
+.info-card {
+  opacity: 0;
+  pointer-events: none;
+  /* transition: opacity .4s ease; */
+  /* transition: opacity 0.9s cubic-bezier(.4,0,.2,1); */
+  /* transform: translateY(16px) scale(.94);
+  transition:
+    opacity 1.1s cubic-bezier(.22,1,.36,1),
+    transform 1.1s cubic-bezier(.22,1,.36,1); */
+
+    transform:
+    translateY(22px)
+    scale(.92);
+  filter: blur(4px);
+  transition:
+    opacity 1.2s cubic-bezier(.22,1,.36,1),
+    transform 3.2s cubic-bezier(.22,1,.36,1),
+    filter 1.2s cubic-bezier(.22,1,.36,1);
+}
+
+.info-card.show {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0) scale(1);
+  filter: blur(0);
+}
+
+
+
 
 /* Panel Info */
 /* Moviles: portrait o standalone */
 @media (max-width: 768px), (orientation: portrait) {
   #pin-info {
     min-width: 75%;
-    top: 6rem;
+    top: 4.5rem;
     left: 50%;
     transform: translateX(-50%);
     flex-direction: row;  /* imagen al lado del texto */
     max-width: 90%;
-    visibility: hidden;
+    visibility: visible;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease;
@@ -153,8 +200,8 @@ html, body {
     transform: translateY(-50%);
     background-color: #111111;
     flex-direction: column; /* imagen debajo del texto */
-    max-width: 30%;
-    visibility: hidden;
+    max-width: 17rem;
+    visibility: visible;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease;
@@ -167,8 +214,8 @@ html, body {
   }
 
   #pin-img {
-    width: 17rem;
-    height: 17rem;
+    width: 15rem;
+    height: 15rem;
     margin-top: 0.5rem;
   }
 }
@@ -204,7 +251,7 @@ html, body {
     transform: translateX(-50%);
     flex-direction: row;
     max-width: 90%;
-    bottom: 7rem;
+    bottom: 6rem;
   }
 }
 
@@ -233,12 +280,12 @@ html, body {
 <main class="stage w-screen h-screen flex items-center justify-center relative">
 
   <!-- Ambient glow -->
-  <div class="absolute w-[90vmin] h-[90vmin] bg-primary/30 blur-[140px] rounded-full"></div>
+  <div class="absolute w-[90vmin] h-[90vmin] bg-primary/40 blur-[140px] rounded-full"></div>
  
 
   <!-- 3D CARD -->
   <div id="card"
-    class="card-3d relative w-[78vmin] max-w-[420px] aspect-square rounded-[28px] glass no-select cursor-grab active:cursor-grabbing">
+    class="card-3d relative w-[78vmin] max-w-[420px] aspect-square rounded-[28px] glass no-select cursor-grab active:cursor-grabbing mb-12">
 
     <!-- IMAGE -->
     <div class="absolute inset-0 rounded-[26px] overflow-hidden translate-z-[40px]">
@@ -280,10 +327,10 @@ html, body {
   <div class="flex flex-col gap-1">
     <div class="text-[9px] text-white font-mono tracking-widest uppercase flex items-center gap-2">
       <span class="w-1 h-1 bg-green-500 rounded-full"></span>
-      System Ready
+      SERVER ON 4B
     </div>
     <div class="text-[9px] text-white/50 font-mono">
-      60FPS • <span class="text-primary">WEBGL</span> • <span class="text-primary">4Bdev SERVER ON</span>
+      60FPS • <span class="text-primary">WEBGL</span> • <span class="text-primary">System Ready</span>
     </div>
   </div>
   <div class="text-[9px] text-white/40 font-mono tracking-wider">
@@ -295,62 +342,71 @@ html, body {
 const card = document.getElementById("card")
 const light = document.getElementById("light")
 
+// --- Variables de estado ---
 let currentX = 0, currentY = 0
 let targetX = 0, targetY = 0
 let dragging = false
 let idleGlow = 0
+let animateId = null
 
+// --- Función de interpolación ---
 const lerp = (a, b, n) => a + (b - a) * n
 
-function animate() {
-  currentX = lerp(currentX, targetX, 0.08)
-  currentY = lerp(currentY, targetY, 0.08)
-
-  card.style.transform =
-    `rotateX(${currentY}deg) rotateY(${currentX}deg)`
-
-  requestAnimationFrame(animate)
-}
-animate()
-
-function updateFromEvent(e) {
-    idleGlow = 0
+// --- Actualiza posición de la luz durante drag ---
+function updateFromPointer(e) {
+  idleGlow = 0
   const rect = card.getBoundingClientRect()
   const x = (e.clientX - rect.left) / rect.width - 0.5
   const y = (e.clientY - rect.top) / rect.height - 0.5
 
-  targetX = x * 24
-  targetY = -y * 24
+  targetX = x * 40 //24
+  targetY = -y * 40 //24
+
+  const MAX_ANGLE = 35; // ángulo máximo permitido
+
+  // dentro de updateFromPointer
+  targetX = Math.max(Math.min(x * 50, MAX_ANGLE), -MAX_ANGLE);
+  targetY = Math.max(Math.min(-y * 50, MAX_ANGLE), -MAX_ANGLE);
+
 
   light.style.opacity = 1
-light.style.background =
-  `radial-gradient(
-    780px at ${x*100+50}% ${y*100+50}%,
-    rgba(0,93,56,.48),
-    transparent 65%
-  )`
+  light.style.background = `
+    radial-gradient(
+      780px at ${x*100+50}% ${y*100+50}%,
+      rgba(0,93,56,.48),
+      transparent 65%
+    )
+  `
 }
 
+// --- Manejo de drag ---
 card.addEventListener("pointerdown", e => {
-  // Si hacemos click sobre un LED, no arrastramos el card
-  if (e.target.classList.contains("pin-led")) return;
+  if (e.target.classList.contains("pin-led")) return
+  dragging = true
+  card.setPointerCapture(e.pointerId)
+  light.classList.add("light--active")
+})
 
-  dragging = true;
-  card.setPointerCapture(e.pointerId);
-  light.classList.add("light--active");
-});
-
+let pointerFrame = null;
 
 card.addEventListener("pointermove", e => {
+  if (!dragging) return;
+  if (pointerFrame) return;
+  pointerFrame = requestAnimationFrame(() => {
+    updateFromPointer(e);
+    pointerFrame = null;
+  });
+});
+
+/* card.addEventListener("pointermove", e => {
   if (!dragging) return
-  updateFromEvent(e)
-})
+  updateFromPointer(e)
+}) */
 
 function release() {
   dragging = false
   targetX = 0
   targetY = 0
-
   light.classList.remove("light--active")
 }
 
@@ -358,18 +414,22 @@ card.addEventListener("pointerup", release)
 card.addEventListener("pointerleave", release)
 card.addEventListener("pointercancel", release)
 
-setInterval(() => {
+// --- Animación principal ---
+function animate() {
+  // Interpolación suave
+  currentX = lerp(currentX, targetX, 0.16)
+  currentY = lerp(currentY, targetY, 0.16)
+  card.style.transform = `rotateX(${currentY}deg) rotateY(${currentX}deg)`
+
+  // Idle glow cuando no se arrastra
   if (!dragging) {
     const t = Date.now()
+    targetX = Math.sin(t / 2000) * 18
+    targetY = Math.cos(t / 2400) * 18
 
-    targetX = Math.sin(t / 2000) * 9
-    targetY = Math.cos(t / 2400) * 9
-
-    // intensidad oscilante del brillo
     idleGlow = (Math.sin(t / 1800) + 1) * 0.5
 
     light.style.opacity = 0.35 + idleGlow * 0.25
-
     light.style.background = `
       radial-gradient(220px at 15% 15%,
         rgba(0,93,56,${0.22 + idleGlow * 0.20}),
@@ -381,9 +441,23 @@ setInterval(() => {
       )
     `
   }
-}, 50)
 
+  animateId = requestAnimationFrame(animate)
+}
+
+// --- Inicializa animación ---
+animate()
+
+// --- Pausar cuando la pestaña no está visible ---
+document.addEventListener("visibilitychange", () => {
+  if (document.hidden) {
+    cancelAnimationFrame(animateId)
+  } else {
+    animateId = requestAnimationFrame(animate)
+  }
+})
 </script>
+
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
@@ -393,95 +467,85 @@ document.addEventListener("DOMContentLoaded", () => {
   const title = document.getElementById("pin-title");
   const desc  = document.getElementById("pin-desc");
 
+  const pinInfo = document.getElementById("pin-info");
+  const buyInfo = document.getElementById("buy-info");
+
   const pins = [
-    { x: 0.24, y: 0.19, title: "CPU", desc: "Zona de procesamiento principal", img: "./info/cpu.jpg" },
-    { x: 0.65, y: 0.35, title: "RAM", desc: "Memoria dinámica del sistema", img: "./info/ram.jpg" },
-    { x: 0.45, y: 0.75, title: "Power", desc: "Estado de encendido", img: "./info/power.jpg" },
-    { x: 0.8, y: 0.6, title: "I/O", desc: "Entradas y salidas", img: "./info/io.jpg" }
+    { x: 0.225, y: 0.185, title: "Turnos Mediodía", desc: "Bloque con miembros para el turno mediodia, Rango de 10:30 a 17:00", img: "./info/cpu.jpg" },
+    { x: 0.176, y: 0.465, title: "Turnos de Noche", desc: "Bloque con miembros para el turno noche, Rango de 19:00 a 01:00", img: "./info/io.jpg" },
+    { x: 0.960, y: 0.115, title: "Nombre de Local", desc: "Tu sede fija y equipo con el que compartes horarios.", img: "./info/cpu.jpg" },
+    { x: 0.306, y: 0.11, title: "Día y Semana actual", desc: "Renderizado del día actual junto con todos los datos del widget.", img: "./info/ram.jpg" },
+    { x: 0.592, y: 0.246, title: "Comidas", desc: "Comida de fin de franja para los miebros asignados según cálculo de horas.", img: "./info/power.jpg" },
+    { x: 0.055, y: 0.652, title: "Turnos de Apertura y Cierre", desc: "Los pilares del turno, los miembros que abren y cierran el turno indicado con colores. ", img: "./info/io.jpg" },
+    { x: 0.568, y: 0.652, title: "Estado de cuenta PRO", desc: "Las lineas de color azúl representan 2 días con PRO, las lineas grises son días vacíos. Todo el stack representa 1mes de PRO", img: "./info/io.jpg" },
+    { x: 0.08, y: 0.752, title: "Apartado exclusivo para usuario PRO", desc: "Horario semanal del usuario, con franjas y días libres señalados. El día actual siempre se marca de color oscuro.", img: "./info/io.jpg" },
+    { x: 0.908, y: 0.722, title: "Contador de tiempo restante", desc: "Dos tipos de contadores pasa saber en cuanto tiempo exacto entras o sales del turno según el contexto. Los contadores funcionan en distintos tamaños del widget para los usuario PRO.", img: "./info/io.jpg" }
   ];
+
+
+    let pinHideTimeout = null;
+  let buyShowTimeout = null;
+  let buyHideTimeout = null;
+
+  const PIN_DURATION = 9000;
+  const BUY_DELAY = 1000;
+
+  function showPinInfo() {
+    pinInfo.classList.add("show");
+
+    clearTimeout(pinHideTimeout);
+    clearTimeout(buyShowTimeout);
+    clearTimeout(buyHideTimeout);
+
+    buyShowTimeout = setTimeout(() => {
+      buyInfo.classList.add("show");
+    }, BUY_DELAY);
+
+    pinHideTimeout = setTimeout(hidePinInfo, PIN_DURATION);
+  }
+
+  function hidePinInfo() {
+    pinInfo.classList.remove("show");
+
+    buyHideTimeout = setTimeout(() => {
+      buyInfo.classList.remove("show");
+    }, BUY_DELAY);
+  }
+
 
   pins.forEach(pin => {
     const el = document.createElement("div");
     el.className = "pin-led";
     el.style.left = (pin.x * 100) + "%";
     el.style.top  = (pin.y * 100) + "%";
-  
+
     el.addEventListener("click", e => {
       e.stopPropagation();
+
       title.textContent = pin.title;
       desc.textContent  = pin.desc;
       document.getElementById("pin-img").src = pin.img;
-  
-      // Mostrar cuadro con fade-in
-      info.classList.add("show");
-  
-      // Limpiar cualquier timeout anterior
-      if (info.hideTimeout) clearTimeout(info.hideTimeout);
-  
-      // Ocultar después de 8 segundos con fade-out
-      info.hideTimeout = setTimeout(() => {
-        info.classList.remove("show");
-      }, 8000);
+
+      showPinInfo();
     });
-  
+
     layer.appendChild(el);
   });
 
-  /* document.addEventListener("click", () => {
-    info.style.opacity = "0";
-    info.style.pointerEvents = "none";
-  }); */
-  document.addEventListener("click", (e) => {
-    // Si el click fue sobre un LED, no ocultamos info
-    if (e.target.classList.contains("pin-led")) return;
-  
-    const info = document.getElementById("pin-info");
-    info.classList.remove("show");
-    clearTimeout(info.hideTimeout); // cancela cualquier timeout pendiente
-  });
-
 });
-
-
-
-function showBuyInfo() {
-  const buyInfo = document.getElementById("buy-info");
-  
-  // Mostrar con fade
-  buyInfo.classList.add("show");
-
-  // Limpiar cualquier timeout anterior
-  if (buyInfo.hideTimeout) clearTimeout(buyInfo.hideTimeout);
-
-  // Ocultar después de 8 segundos
-  buyInfo.hideTimeout = setTimeout(() => {
-    buyInfo.classList.remove("show");
-  }, 8000);
-}
-
-// Ejemplo: mostrar cuadro de compra al hacer click en un botón o LED
-/* document.getElementById("card").addEventListener("dblclick", showBuyInfo); */
-
-document.addEventListener("DOMContentLoaded", () => {
-  const buyInfo = document.getElementById("buy-info");
-  buyInfo.classList.add("show"); // para ver si se ve al cargar
-});
-
-
-
 
 </script>
 
 
 
-<div id="pin-info"
-  class="fixed left-6 top-1/2 -translate-y-1/2
+<div id="pin-info" class="info-card fixed left-6 top-1/2 -translate-y-1/2
          z-50 opacity-0 pointer-events-none
          bg-black/70 backdrop-blur-xl
          border border-white/10
          rounded-2xl p-4 max-w-[320px]
          transition-opacity duration-300
-         flex flex-col md:flex-col lg:flex-row gap-4 items-center">
+         flex flex-col md:flex-col lg:flex-row gap-4 items-start text-left">
+
   
   <!-- Imagen del pin -->
   <img id="pin-img" src="./info/io.jpg" alt="Pin Image"
@@ -495,7 +559,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </div>
 
     <div id="buy-info"
-     class="fixed z-50 opacity-0 pointer-events-none
+     class="info-card fixed z-50 opacity-0 pointer-events-none
             bg-black/60 backdrop-blur-[18px]
             border border-white/10
             rounded-2xl p-3 sm:p-4
@@ -508,36 +572,33 @@ document.addEventListener("DOMContentLoaded", () => {
        class="w-14 sm:w-16 h-14 sm:h-16 object-contain drop-shadow-md mb-1">
 
   <!-- Texto de compra -->
-  <div>
+  <div class="w-full">
     <h3 class="text-sm sm:text-base font-semibold mb-0.5 leading-snug">HorarioTimes.js</h3>
-    <p class="text-[10px] sm:text-xs text-white/70 leading-tight mb-0.5">
+    <p class="text-[10px] sm:text-xs text-white/70 leading-tight balance-text"> <!-- mb-0.5 -->
         Nadie tiene mejores horarios que tú.
-    </p>
-    <p class="text-[10px] sm:text-xs text-white/70 leading-tight">
+    <!-- </p>
+    <p class="text-[10px] sx:text-xs text-white/70 leading-tight"> -->
         La forma más práctica de ver tu rutina.
     </p>
   </div>
 
   <!-- Botones compactos centrados -->
-  <div class="flex flex-col sm:flex-row justify-center items-center gap-2 sm:gap-3 w-full mt-2">
+  <div class="flex flex-col sm:flex-row justify-center items-center gap-2 sm:gap-3 w-full mt-0">
     <!-- Descarga gratuita -->
     <a href="#"
-       class="w-full sm:w-32 text-center px-2 py-1 rounded-full bg-white text-black text-[10px] sm:text-xs font-medium 
+       class="w-full sm:w-32 text-center px-2 py-2 rounded-full bg-white text-black text-[10px] sm:text-xs font-medium 
               hover:bg-gray-100 transition-colors duration-200 shadow-sm">
       Free mode
     </a>
   
     <!-- Comprar PRO -->
     <a href="#"
-       class="w-full sm:w-32 text-center px-2 py-1 rounded-full bg-[#327D5F] text-white text-[10px] sm:text-xs font-medium 
+       class="w-full sm:w-32 text-center px-2 py-2 rounded-full bg-[#327D5F] text-white text-[10px] sm:text-xs font-medium 
               hover:bg-[#00b078] transition-colors duration-200 shadow-sm">
       Comprar PRO
     </a>
   </div>
 </div>
-
-
-
 
 
 </body>
