--- a/timesburg/go/index-2.html
+++ b/timesburg/go/index-2.html
@@ -8,7 +8,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="msapplication-tap-highlight" content="no">
 <meta name="description" content="4B by alibhtty">
-<title>HorarioTimes.js for Timesburg – 4B®</title>
+<title>HorarioTimes.js – 4B®</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;700&display=swap" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com"></script>
@@ -33,7 +33,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.jpg">
   <link rel="icon" href="assets/icons/192x192.png">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="./manifest.json">
 
 <script>
 tailwind.config = {
