--- a/timesburg/go/assets/js/index.html
+++ b/timesburg/go/assets/js/index.html
@@ -10,10 +10,7 @@
 <meta name="description" content="4B by alibhtty">
 <title>HorarioTimes.js – 4B®</title>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;700&display=swap" rel="stylesheet">
-<!-- <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;700&display=swap" rel="stylesheet"/> -->
+<link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;700&display=swap" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com"></script>
 
 <!-- Material Symbols -->
@@ -56,21 +53,6 @@ tailwind.config = {
 }
 </script>
 
-<style>
-  html.loading body {
-    opacity: 0;
-    overflow: hidden;
-  }
-
-  html.ready body {
-    opacity: 1;
-    transition: opacity 420ms cubic-bezier(.22,.61,.36,1);
-  }
-</style>
-
-<script>
-  document.documentElement.classList.add('loading');
-</script>
 
 </head>
 
@@ -102,8 +84,7 @@ tailwind.config = {
 
     <!-- IMAGE -->
     <div class="absolute inset-0 rounded-[26px] overflow-hidden translate-z" id="image-slider"> <!-- translate-z-[40px] -->
-      <img src="./assets/img/cover02.jpg" fetchpriority="high"
-                decoding="async" loading="eager" class="slider-img w-full h-full object-cover pointer-events-none filter brightness-[1.2] contrast-[1.3] saturate-[.8] active" />
+      <img src="./assets/img/cover02.jpg" class="slider-img w-full h-full object-cover pointer-events-none filter brightness-[1.2] contrast-[1.3] saturate-[.8] active" />
       <img src="./assets/img/cover01.jpg" class="slider-img w-full h-full object-cover pointer-events-none filter brightness-[1.2] contrast-[1.3] saturate-[.8]" />
       <img src="./assets/img/cover02.jpg" class="slider-img w-full h-full object-cover pointer-events-none filter brightness-[1.2] contrast-[1.3] saturate-[.8]" />
     </div>
